 * support for both relative and absolute paths in the \loadpicture macro
 * updates Serbian translation
 * bugs fixed:
   - ISO8859-2 literals in the source code caused clang warnings
   - removed unnecessary SOURCE_DATE_EPOCH in the thbook Makefile
   - fixed numerical instability in l_overhang_SKBB
   - swapped anastomosis & karren symbols
   - other minor fixes
 * updated shapelib

infrastructure:
 * support for CMake builds (thanks to Matěj Plch)

--------------------------------------------------------------------------------

Therion 5.5.7 (2021-02-06):

therion:
 * added --generate-output-crc, --verify-output-crc options
 * error raised when unknown command line option used
 * version number ends with '-dev' if there are uncommitted local changes
 * optimizations:
   - much faster processing of fixed stations with associated CRS data
   - faster check for optional fonts
 * bugs fixed:
   - survey selection ignored when exporting 3d model from splay shots
   - "cs local" bugfix
   - scrap 3d reconstruction spike artifact fix
   - selection logging bugfix
   - svg/xhtml map export without filename creates cave.pdf file

make:
 * better detection of wx-config variants
 * innosetup.ini is generated in the build directory

--------------------------------------------------------------------------------

Therion 5.5.6 (2020-12-27):

therion:
 * fixed map statistics bug introduced in 5.5.5

--------------------------------------------------------------------------------

Therion 5.5.5 (2020-12-22):

therion:
 * updated Italian translation [#308]
 * fixed bug with statistic explo/topo/carto/copyright <number>
 * fixed bugs related to an undefined Area of Use, which should be used
   in Proj transformations

--------------------------------------------------------------------------------

Therion 5.5.4 (2020-12-15):

therion:
 * added layout-statistics carto|copyright-count
 * use unique pointers in thdatabase [#296]