@@ -1,6 +1,7 @@
 // Standard libraries
 #ifndef LXDEPCHECK
 #include <wx/statline.h>
+#include <wx/busyinfo.h>
 #endif  
 //LXDEPCHECK - standard libraries
 
@@ -16,12 +17,24 @@
 #include <cstdio>
 
 enum {
-  lxSS_SURVEY_TREE = 4000,
+  lxSS_SURVEY_TREE = 4000,  
 };
 
 
+class SurveyTreeData : public wxTreeItemData
+{
+public:
+   size_t m_id;
+   SurveyTreeData(size_t id) 
+     : wxTreeItemData()
+   {
+       this->m_id = id;
+   };
+};
+
 BEGIN_EVENT_TABLE(lxModelTreeDlg, wxMiniFrame)
   EVT_BUTTON(wxID_ANY, lxModelTreeDlg::OnCommand)
+  EVT_BUTTON(wxID_OK, lxModelTreeDlg::OnCommand)
   EVT_BUTTON(wxID_CLOSE, lxModelTreeDlg::OnCommand)
   EVT_MOVE(lxModelTreeDlg::OnMove)
   EVT_CLOSE(lxModelTreeDlg::OnClose)
@@ -34,8 +47,36 @@ void lxModelTreeDlg::OnCommand(wxCommandEvent& event)
     case wxID_CLOSE:
       this->m_mainFrame->ToggleSelectionSetup();
       break;
-
-
+    case wxID_OK: 
+#if wxCHECK_VERSION(3,0,0)
+    	wxWindowDisabler disableAll;
+#endif
+    	wxBusyInfo info(_("Building 3D model, please wait..."), this->m_mainFrame);
+#if wxCHECK_VERSION(3,0,0)
+    	wxTheApp->Yield();
+#endif
+		this->m_mainFrame->data->ClearSurveySelection();
+		wxArrayTreeItemIds csel;
+		size_t selcnt = this->m_treeControl->GetSelections(csel);
+    	if (selcnt > 0) {
+    		for(size_t i = 0; i < selcnt; i++) {
+    			SurveyTreeData * data = (SurveyTreeData *) this->m_treeControl->GetItemData(csel.Item(i));
+        		if (data != NULL) {
+        			this->m_mainFrame->data->AddSelectedSurvey(data->m_id);
+        		}
+    		}
+    	}
+		this->m_mainFrame->data->Rebuild();
+#if wxCHECK_VERSION(3,0,0)
+    	wxTheApp->Yield();
+#endif
+		this->m_mainFrame->canvas->UpdateContents();
+		this->m_mainFrame->setup->ResetCamera();
+		this->m_mainFrame->canvas->ForceRefresh();
+#if wxCHECK_VERSION(3,0,0)
+    	wxTheApp->Yield();
+#endif
+    	break;
   }
 }
 
@@ -71,12 +112,17 @@ lxModelTreeDlg::lxModelTreeDlg(wxWindow *parent)
 
 	lxPanel = new wxPanel(this, wxID_ANY);
 
-  this->m_treeControl = new wxTreeCtrl(lxPanel);
+  this->m_treeControl = new wxTreeCtrl(lxPanel,wxID_ANY,wxDefaultPosition,wxDefaultSize,wxTR_MULTIPLE);
 
+  wxBoxSizer * lxBoxSizer = new wxBoxSizer(wxHORIZONTAL);
+  lxBoxSizer->Add(new wxButton(this, wxID_OK, _("Select")), 0, wxALIGN_CENTER | wxLEFT | wxRIGHT | wxBOTTOM, lxBORDER);
+  lxBoxSizer->Add(new wxButton(this, wxID_CLOSE, _("Close")), 0, wxALIGN_CENTER | wxRIGHT | wxBOTTOM, lxBORDER);
+
+  
 	sizerTop->Add( this->m_treeControl, 
 		1, wxALL | wxEXPAND, lxBORDER);
 	sizerTop->Add(
-		new wxButton(lxPanel, wxID_CLOSE, _("Close")), 
+		lxBoxSizer, 
 		0, wxALIGN_RIGHT | lxNOTTOP, lxBORDER);
   
   lxPanel->SetSizer(sizerTop);
@@ -113,8 +159,9 @@ void lxModelTreeDlg::LoadData()
   }
   for(; i != data->surveys.end(); i++) {
     //printf("%s - parent %d\n",strlen(i->m_title) > 0 ? i->m_title : i->m_name,i->m_parent);
-    parents.push_back(this->m_treeControl->AppendItem(parents[(i->m_parent + add) < parents.size() ? (i->m_parent + add) : 0], wxConvUTF8.cMB2WX(strlen(i->m_title) > 0 ? i->m_title : i->m_name)));
+    parents.push_back(this->m_treeControl->AppendItem(parents[(i->m_parent + add) < parents.size() ? (i->m_parent + add) : 0], wxConvUTF8.cMB2WX(strlen(i->m_title) > 0 ? i->m_title : i->m_name), -1, -1, new SurveyTreeData(i->m_id)));
   }
+  this->m_treeControl->ExpandAll();
 }
 
 
