@@ -113,6 +113,7 @@ void lxSetup::UpdateData()
   lxDataShot * shp;
   for(id = 0; id < nid; id++) {
     shp = &(this->data->shots[id]);
+    if (!shp->m_selected) continue;    
     if (this->m_vis_centerline && 
       (((!shp->surface) && this->m_vis_centerline_cave) ||
       (shp->surface && this->m_vis_centerline_surface)))  {
@@ -127,6 +128,7 @@ void lxSetup::UpdateData()
 
   nid = this->data->stations.size();
   for(id = 0; id < nid; id++) {
+    if (!this->data->stations[id].m_selected) continue;    
     tmp.Add(this->data->stations[id].pos);
   }
 
